# agentops

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  TEST_PLAN.md  agentops.spec  install.sh  pyproject.toml  uninstall.sh
scripts/: make-icns.sh
src/agentops/: __main__.py  app.py  cli.py  config.py  paths.py
src/agentops/assets/: shell.css  shell.html  shell.js
src/agentops/defaults/: services.yaml
tests/: test_config.py
